@@ -100,6 +100,7 @@ Chris T.
 Robert C)
 * Fixed contact info addition workflow.  Now entering multiple contact records 
 is not a total pain(Chris T)
+* Fixed lines 2 and 3 not showing on address div for contacts (Chris T)
 
 Changelog for 1.3.28
 * Added db list to setup.pl when no db is entered and credentials allow login
